--- a/login/index.html
+++ b/login/index.html
@@ -217,7 +217,7 @@ window.onload = function()
             <div id="uptodate" style="display: none;">Your Singularity is up to date.</div>
             <div id="updateavail" style="display: block;">
                 <img src="alert.png" style="vertical-align: bottom;" />
-                An updated version of Singularity is availabe. Please visit the
+                An updated version of Singularity is available. Please visit the
                 <a href="http://www.singularityviewer.org/">Singularity main site</a>
                 to download it.
             </div>
