Open downloads page in the full window

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -72,7 +72,7 @@ Singularity 1.8.1(4863)<br/>
 for Windows
   </span></a>
   <a id="windows_chrome" 
-href="http://www.singularityviewer.org/downloads/"><span>
+href="http://www.singularityviewer.org/downloads/" target="_top"><span>
 Singularity 1.8.1(4863)<br/>
 12 Aug 2013 
 for Windows
