Force opening download page in external browser

--- a/login/index.html
+++ b/login/index.html
@@ -218,7 +218,7 @@ window.onload = function()
             <div id="updateavail" style="display: block;">
                 <img src="alert.png" style="vertical-align: bottom;" />
                 An updated version of Singularity is available. Please visit the
-                <a href="http://www.singularityviewer.org/">Singularity main site</a>
+                <a href="http://www.singularityviewer.org/" target="_external">Singularity main site</a>
                 to download it.
             </div>
         </div>
