--- a/downloads/index.html
+++ b/downloads/index.html
@@ -66,32 +66,32 @@ span{
 </head>
 <body>
   <a id="windows" 
-href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity_1-8-3-4998_Setup.exe"><span>
-Singularity 1.8.3(4998)<br/>
+href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity_1-8-4-5433_Setup.exe"><span>
+Singularity 1.8.4(5433)<br/>
 18 Sep 2013 
 for Windows
   </span></a>
   <a id="windows_chrome" 
-href="http://www.singularityviewer.org/downloads/" target="_top"><span>
-Singularity 1.8.3(4998)<br/>
+href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span>
+Singularity 1.8.4(5433)<br/>
 18 Sep 2013 
 for Windows
   </span></a>
   <a id="mac" 
-href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity_1_8_3_4998.dmg"><span>
-Singularity 1.8.3(4998)<br/>
+href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity_1_8_4_5433.dmg"><span>
+Singularity 1.8.4(5433)<br/>
 18 Sep 2013 
 for OS X
   </span></a>
   <a id="linux" 
-href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-i686-1.8.3.4998.tar.bz2"><span>
-Singularity 1.8.3(4998)<br/>
+href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-i686-1.8.4.5433.tar.bz2"><span>
+Singularity 1.8.4(5433)<br/>
 18 Sep 2013 
 for Linux
   </span></a>
   <a id="linux64" 
-href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-x86_64-1.8.3.4998.tar.bz2"><span>
-Singularity 1.8.3(4998)<br/>
+href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-x86_64-1.8.4.5433.tar.bz2"><span>
+Singularity 1.8.4(5433)<br/>
 18 Sep 2013 
 for Linux64
   </span></a>
@@ -103,6 +103,7 @@ Unable to detect your system. <br/> Please visit Download section.</span></a>
 <script type="text/javascript">
 var p = (navigator.platform);
 var is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
+is_chrome = 1;
 
 if ((p.indexOf("Win32")!= -1) || (p.indexOf("Win64")!= -1)) {
   if (is_chrome) {
