Sourceforge is back
This reverts commit 7bc1ae350fd234c3f72f68bf6ef7f5a65d395cbd.

--- a/login/index.html
+++ b/login/index.html
@@ -230,7 +230,7 @@ window.onload = function()
             <div id="alpha_updateavail" style="display: none;">
                 <img src="alert.png" style="vertical-align: bottom;" />
                 An updated version of Singularity Alpha is available. Please visit the
-                <a href="http://files.streamgrid.net/singularity/" target="_external">Singularity Alpha builds page</a>
+                <a href="http://alpha.singularityviewer.org/alpha/" target="_external">Singularity Alpha builds page</a>
                 to download it.
             </div>
         </div>
