--- a/login/index.html
+++ b/login/index.html
@@ -154,7 +154,7 @@ window.onload = function()
     else if (urlParams["channel"] == "Singularity Zero" && compareVersion("1.8.5 (6068)", urlParams["version"]) > 0)
     {
       toolbarShown = true;
-      if (urlParams["lang"] == "fr"")
+      if (urlParams["lang"] == "fr")
         setVisible("zero_updatetoalpha_fr");
       else
         setVisible("zero_updatetoalpha");
