Fix IE Screening

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -66,7 +66,7 @@ span{
 </head>
 <body>
   <a id="windows" 
-href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity_1-8-6-6156_Setup.exe"><span>
+href="https://github.com/singularity-viewer/SingularityViewer/releases/download/1.8.6/Singularity_1-8-6-6156_Setup.exe"><span>
 Singularity 1.8.6(6156)<br/>
 4 Sep 2014 
 for Windows
