--- a/downloads/index.html
+++ b/downloads/index.html
@@ -101,9 +101,9 @@ Singularity 1.8.6(6157)<br/>
 for Linux
   </span></a>
   <a id="linux64" 
-href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-x86_64-1.8.6.6157.tar.bz2"><span>
-Singularity 1.8.6(6157)<br/>
-27 Feb 2015 
+href="http://67.170.30.149/Singularity_1_8_7_6861_x86_64.tar.xz"><span>
+Singularity 1.8.7(6861)<br/>
+16 Jun 2016 
 for Linux64
   </span></a>
   <a id="unknown" href="http://www.singularityviewer.org/downloads"><span>
