LOWERCASE is never uppercase.

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -112,8 +112,8 @@ Unable to detect your system. <br/> Please visit Download section.</span></a>
 <script type="text/javascript">
 var p = navigator.platform;
 var ua = navigator.userAgent.toLowerCase();
-var is_64 = ua.indexOf("x86_64") != -1 || ua.indexOf("x86-64") != -1 || ua.indexOf("Win64") != -1 ||
-  ua.indexOf("x64;") != -1 || ua.indexOf("amd64") != -1 || ua.indexOf("WOW64") != -1 || ua.indexOf("x64_64") != -1;
+var is_64 = ua.indexOf("x86_64") != -1 || ua.indexOf("x86-64") != -1 || ua.indexOf("win64") != -1 ||
+  ua.indexOf("x64;") != -1 || ua.indexOf("amd64") != -1 || ua.indexOf("wow64") != -1 || ua.indexOf("x64_64") != -1;
 if ((p.indexOf("Win32")!= -1) || (p.indexOf("Win64")!= -1)) {
   if (ua.indexOf('chrome')!= -1) {
     document.getElementById("windows_chrome").style.display = "block";
