--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,21 +71,23 @@ span{
 </head>
 <body>
   <a id="windows" 
-href="https://github.com/singularity-viewer/SingularityViewer/releases/download/1.8.7/Singularity_1_8_7_6861_i686_Setup.exe"><span>
-Singularity 1.8.7(6861)<br/>
-16 Jun 2016 
+href="http://alpha.singularityviewer.org/"><span>
+Singularity 1.8.7(Alpha)<br/>
+Latest Builds
 for Windows
   </span></a>
   <a id="windows64" 
-href="https://github.com/singularity-viewer/SingularityViewer/releases/download/1.8.7/Singularity_1_8_7_6861_x86_64_Setup.exe"><span>
-Singularity 1.8.7(6861)<br/>
-16 Jun 2016 
+href="http://alpha.singularityviewer.org/"><span>
+Singularity 1.8.7(Alpha)<br/>
+Latest Builds
 for Windows
   </span></a>
-  <a id="windows_chrome" 
-href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span>
-Singularity 1.8.7(6861)<br/>
-16 Jun 2016 
+  <!--a id="windows_chrome" 
+href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span-->
+  <a id="windows_chrome"
+href="http://alpha.singularityviewer.org/"><span>
+Singularity 1.8.7(Alpha)<br/>
+Latest Builds
 for Windows
   </span></a>
   <a id="mac" 
@@ -94,17 +96,17 @@ Singularity 1.8.6(6156)<br/>
 4 Sep 2014 
 for OS X
   </span></a>
+  <a id="linux64"
+href="http://alpha.singularityviewer.org/"><span>
+Singularity 1.8.7(Alpha)<br/>
+Latest Builds
+for Linux64
+  </span></a>
   <a id="linux" 
 href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-i686-1.8.6.6157.tar.bz2"><span>
 Singularity 1.8.6(6157)<br/>
 27 Feb 2015 
 for Linux
-  </span></a>
-  <a id="linux64" 
-href="http://67.170.30.149/Singularity_1_8_7_6866_x86_64.tar.xz"><span>
-Singularity 1.8.7(6866)<br/>
-25 Jun 2016 
-for Linux64
   </span></a>
   <a id="unknown" href="http://www.singularityviewer.org/downloads"><span>
 Unable to detect your system. <br/> Please visit Download section.</span></a>
