--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,13 +71,13 @@ span{
 </head>
 <body>
   <a id="windows" 
-href="http://alpha.singularityviewer.org/"><span>
+href="javascript:alpha_page()"><span>
 Singularity 1.8.7(Alpha)<br/>
 Latest Builds
 for Windows
   </span></a>
   <a id="windows64" 
-href="http://alpha.singularityviewer.org/"><span>
+href="javascript:alpha_page()"><span>
 Singularity 1.8.7(Alpha)<br/>
 Latest Builds
 for Windows
@@ -85,7 +85,7 @@ for Windows
   <!--a id="windows_chrome" 
 href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span-->
   <a id="windows_chrome"
-href="http://alpha.singularityviewer.org/"><span>
+href="javascript:alpha_page()"><span>
 Singularity 1.8.7(Alpha)<br/>
 Latest Builds
 for Windows
@@ -143,6 +143,7 @@ else if (p.indexOf("MacIntel")!= -1) {
   document.getElementById("unknown").style.diplay = "none";
 }
 
+function alpha_page() { window.top.location.href = 'http://alpha.singularityviewer.org' }
 </script>
 
 </body>
