--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,22 +71,22 @@ span{
 </head>
 <body>
   <a id="windows" 
-href="javascript:alpha_page()"><span>
-Singularity 1.8.7(Alpha)<br/>
+href="javascript:nightly_page()"><span>
+Singularity 1.8.7(Nightly)<br/>
 Latest Builds
 for Windows
   </span></a>
   <a id="windows64" 
-href="javascript:alpha_page()"><span>
-Singularity 1.8.7(Alpha)<br/>
+href="javascript:nightly_page()"><span>
+Singularity 1.8.7(Nightly)<br/>
 Latest Builds
 for Windows
   </span></a>
   <!--a id="windows_chrome" 
 href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span-->
   <a id="windows_chrome"
-href="javascript:alpha_page()"><span>
-Singularity 1.8.7(Alpha)<br/>
+href="javascript:nightly_page()"><span>
+Singularity 1.8.7(Nightly)<br/>
 Latest Builds
 for Windows
   </span></a>
@@ -97,8 +97,8 @@ Singularity 1.8.6(6156)<br/>
 for OS X
   </span></a>
   <a id="linux64"
-href="http://alpha.singularityviewer.org/"><span>
-Singularity 1.8.7(Alpha)<br/>
+href="javascript:nightly_page()"><span>
+Singularity 1.8.7(Nightly)<br/>
 Latest Builds
 for Linux64
   </span></a>
@@ -143,7 +143,7 @@ else if (p.indexOf("MacIntel")!= -1) {
   document.getElementById("unknown").style.diplay = "none";
 }
 
-function alpha_page() { window.top.location.href = 'http://alpha.singularityviewer.org' }
+function nightly_page() { window.top.location.href = 'http://nightly.singularityviewer.org' }
 </script>
 
 </body>
