--- a/downloads/index.html
+++ b/downloads/index.html
@@ -71,22 +71,20 @@ span{
 </head>
 <body>
   <a id="windows" 
-href="javascript:nightly_page()"><span>
-Singularity 1.8.7(Nightly)<br/>
+href="https://github.com/singularity-viewer/SingularityViewer/releases/download/sv-1.8.9.8338-release/Singularity_1_8_9_8338_i686_Setup.exe"><span>
+Singularity 1.8.9 (8338)<br/>
 Latest Builds
 for Windows
   </span></a>
   <a id="windows64" 
-href="javascript:nightly_page()"><span>
-Singularity 1.8.7(Nightly)<br/>
+href="https://github.com/singularity-viewer/SingularityViewer/releases/download/sv-1.8.9.8338-release/Singularity_1_8_9_8338_x86_64_Setup.exe"><span>
+Singularity 1.8.9 (8338)<br/>
 Latest Builds
 for Windows
   </span></a>
-  <!--a id="windows_chrome" 
-href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span-->
-  <a id="windows_chrome"
-href="javascript:nightly_page()"><span>
-Singularity 1.8.7(Nightly)<br/>
+  <a id="windows_chrome" 
+href="http://www.singularityviewer.org/downloads/#windows" target="_top"><span>
+Singularity 1.8.9 (8338)<br/>
 Latest Builds
 for Windows
   </span></a>
@@ -97,16 +95,16 @@ Singularity 1.8.6(6156)<br/>
 for OS X
   </span></a>
   <a id="linux64"
-href="javascript:nightly_page()"><span>
-Singularity 1.8.7(Nightly)<br/>
+href="https://github.com/singularity-viewer/SingularityViewer/releases/download/sv-1.8.9.8338-release/Singularity_1_8_9_8338_x86_64.tar.xz"><span>
+Singularity 1.8.9 (8338)<br/>
 Latest Builds
 for Linux64
   </span></a>
   <a id="linux" 
 href="https://bitbucket.org/SingularityViewer/singularityviewer/downloads/Singularity-i686-1.8.6.6157.tar.bz2"><span>
 Singularity 1.8.6(6157)<br/>
-27 Feb 2015 
-for Linux
+27 Feb 2015
+for Obsolete Linux
   </span></a>
   <a id="unknown" href="http://www.singularityviewer.org/downloads"><span>
 Unable to detect your system. <br/> Please visit Download section.</span></a>
